--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "csv": "^3.1.0",
     "html-entities": "^1.2.1",
     "lodash": "^4.17.10",
     "lowdb": "^1.0.0",
+    "natural": "^0.6.1",
+    "pino": "^4.17.3",
+    "sentiment": "^5.0.1",
     "simple-statistics": "^6.1.0"
   }
 }
