--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "bytewise": "^1.1.0",
+    "charwise": "^3.0.1",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "csv": "^3.1.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "html-entities": "^1.2.1",
+    "level": "^4.0.0",
     "lodash": "^4.17.10",
     "lowdb": "^1.0.0",
     "natural": "^0.6.1",
     "pino": "^4.17.3",
     "sentiment": "^5.0.1",
     "simple-statistics": "^6.1.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "subleveldown": "^3.0.0"
   }
 }
