--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "level": "^4.0.0",
     "lodash": "^4.17.10",
     "lowdb": "^1.0.0",
+    "lru-cache": "^4.1.3",
     "natural": "^0.6.1",
     "pino": "^4.17.3",
     "sentiment": "^5.0.1",
     "simple-statistics": "^6.1.0",
     "socket.io": "^2.1.1",
-    "subleveldown": "^3.0.0"
+    "subleveldown": "^3.0.0",
+    "yargs": "^12.0.1"
   }
 }
