--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "categorize",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,22 +12,22 @@
     "axios": "^0.18.0",
     "bytewise": "^1.1.0",
     "charwise": "^3.0.1",
-    "compression": "^1.7.2",
+    "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "crc": "^3.8.0",
     "csv": "^3.1.0",
     "express": "^4.16.3",
-    "helmet": "^3.12.1",
+    "helmet": "^3.13.0",
     "html-entities": "^1.2.1",
     "level": "^4.0.0",
     "lodash": "^4.17.10",
-    "lowdb": "^1.0.0",
     "lru-cache": "^4.1.3",
     "natural": "^0.6.1",
-    "pino": "^4.17.3",
-    "sentiment": "^5.0.1",
+    "pino": "^4.17.5",
     "simple-statistics": "^6.1.0",
     "socket.io": "^2.1.1",
-    "subleveldown": "^3.0.0",
+    "subleveldown": "^3.0.1",
+    "wink-porter2-stemmer": "^1.0.8",
     "yargs": "^12.0.1"
   }
 }
